--- a/demo-springzuul/src/main/resources/application.properties
+++ b/demo-springzuul/src/main/resources/application.properties
@@ -4,3 +4,6 @@ eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
 
 zuul.routes.service-user.path=/authapi/**
 zuul.routes.service-user.service-id=springcloud-server-user
+
+zuul.routes.service-topic.path=/postapi/**
+zuul.routes.service-topic.service-id=springcloud-server-post
